# Opencv_Learning_and_Project

./: CMakeLists.txt  README.md
10_MultiChannelImageBlending/: 10_MultiChannelImageBlending.cpp  CMakeLists.txt
11_ChangeContrastAndBright/: 11_ChangeContrastAndBright.cpp  CMakeLists.txt
12_DFT/: 12_dft.cpp  CMakeLists.txt
13_Filter/: 13_Filter.cpp  CMakeLists.txt
14_Morphology/: 14_Morphology.cpp  CMakeLists.txt
15_Floodfill/: 15_floodFill.cpp  CMakeLists.txt
16_Resize/: 16_resize.cpp  CMakeLists.txt
17_thresh/: 17_thresh.cpp  CMakeLists.txt
18_edge_detect/: 18_edge_detect.cpp  CMakeLists.txt
19_hough_transform/: 19_houghtTransform.cpp  CMakeLists.txt
1_HelloOpenCV/: 1_HelloOpenCV.cpp  CMakeLists.txt
20_hough_circle/: CMakeLists.txt  hough_circle.cpp
21_remap/: CMakeLists.txt  remap.cpp
22_affine_transform/: CMakeLists.txt  affine_transform.cpp
23_equalize/: 23_equalize.cpp
26_bounding/: 26_bounding.cpp
27_bounding_countour/: 27_bounding_contour.cpp
28_moments/: 28_moments.cpp
29_compare_hist/: compare_hist.cpp
2_Use_imwrite/: 2_Use_imwrite.cpp  CMakeLists.txt
30_backproj/: back_projection.cpp
31_match_template/: match_template.cpp
3_LoadShowOutputImage/: 3_LoadShowOutputImage.cpp  CMakeLists.txt
4_CreateTrackbar/: 4_CreateTrackbar.cpp  CMakeLists.txt
5_UseMouse/: 5_UseMouse.cpp  CMakeLists.txt
6_UseMat/: 6_UseMat.cpp  CMakeLists.txt
7_DrawImage/: 7_draw_image.cpp  CMakeLists.txt
8_AccessPicel/: 8_AccessPixel.cpp  CMakeLists.txt
9_ROI_addWeight/: 9_ImageBlending.cpp  CMakeLists.txt
opencv_project/AIVirtualKeyboard/: main.py
opencv_project/AngleFinder/: main.py
opencv_project/Basketball_shot_Predictior/: find_ball.py  main.py
opencv_project/CarParkProject/: ParkingSpacePicker.py  carParkSpace.py
opencv_project/Real_TIme_Object_measurement/: ObjectMeasurement.py  utlis.py
opencv_project/Virtual_Calculator/: Virtual_Calculator.py
